--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   border: 2px solid white;
   border-radius: 20px;
   width: 70%;
-  height: 80vh;
+  height: 90vh;
   margin: 20px auto;
   overflow-y: scroll;
   background-color: white;
@@ -56,8 +56,9 @@ body {
   width: 50vw;
   gap: 10px;
   height: 10vh;
-  border-bottom: 2px solid rgb(195, 192, 192);
+  /* border-bottom: 2px solid rgb(195, 192, 192); */
   margin-bottom: 20px;
+  background-color: #d2eafa8d;
 }
 
 button {
@@ -92,6 +93,7 @@ input {
     width: 90%;
     height: 90vh;
     font-size: small;
+    overflow-x: hidden;
   }
 
   .todo {
@@ -104,11 +106,8 @@ input {
     width: 80%;
   }
 
-  #addButton {
-    padding: 2px;
+  #add {
     border: none;
-    border-radius: 20px;
-    width: 2em;
   }
 
   .lists {
@@ -117,11 +116,13 @@ input {
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 20px;
   }
 
   .lists .tasks {
     width: 90%;
     display: flex;
+    overflow-x: hidden;
     margin: 0 auto;
     min-height: fit-content;
     align-items: center;
@@ -132,6 +133,7 @@ input {
     border: none;
     border-radius: 20px;
     min-width: fit-content;
+    background-color: white;
   }
 }
 
@@ -172,5 +174,47 @@ input {
     border: none;
     border-radius: 20px;
     min-width: fit-content;
+  }
+}
+
+/* Laptop screen */
+@media (min-width: 768px) {
+  .container {
+    width: 80%;
+    overflow-x: hidden;
+  }
+
+  .todo {
+    width: 100%;
+    margin: 5px;
+    gap: 2px;
+  }
+
+  .todo input {
+    width: 80%;
+    text-align: center;
+  }
+  .lists {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: medium;
+    gap: 20px;
+  }
+
+  .lists .tasks {
+    width: 90%;
+    display: flex;
+    margin: 0 auto;
+    min-height: 90px;
+    align-items: center;
+  }
+
+  .tasks button {
+    font-size: medium;
+    border: none;
+    background-color: white;
   }
 }
